Change RUN button id

--- a/static/anvil.html
+++ b/static/anvil.html
@@ -139,7 +139,7 @@
                 If you don't see any progress after 1 minute, the program
                 probably crashed.<br />
                 All the errors go to the developer console.<br /><br />
-                <button id="comphdl_start" onClick="runGui()">RUN!</button>
+                <button id="ssf_start" onClick="runGui()">RUN!</button>
             </div>
             <div style="grid-column: 1 / 2; grid-row: 6 / 7;">
                 <textarea id="output_textarea" class="code" rows="20" readonly>
