--- a/static/rivers.html
+++ b/static/rivers.html
@@ -218,7 +218,7 @@
                     readonly
                 />
                 <button onClick="countCandidates()">ESTIMATE RUNTIME</button>
-                <button id="comphdl_start" onClick="runGui()">RUN!</button>
+                <button id="ssf_start" onClick="runGui()">RUN!</button>
             </div>
             <div style="grid-column: 4 / 5; grid-row: 2 / 3;">
                 <textarea id="output_textarea" class="code" rows="20" readonly>
