--- a/static/slime.html
+++ b/static/slime.html
@@ -76,7 +76,7 @@ Found 48-bit seeds will appear here.</textarea
                 <button id="estimate_runtime" onClick="countCandidates()">
                     ESTIMATE RUNTIME
                 </button>
-                <button id="comphdl_start" onClick="runGui()">RUN!</button>
+                <button id="ssf_start" onClick="runGui()">RUN!</button>
             </div>
         </div>
 
