Improve find_block.html, add dimension selector

--- a/static/find_block.html
+++ b/static/find_block.html
@@ -146,6 +146,13 @@
                     size="5"
                 />
                 <br />
+                Dimension <br />
+                <select id="dimension">
+                    <option value="DIM0" selected>Overworld</option>
+                    <option value="DIM-1">Nether</option>
+                    <option value="DIM1">End</option>
+                </select>
+                <br />
                 <button id="button_find_block" onClick="findBlock()">
                     FIND BLOCK
                 </button>
